--- a/BisLeagues.Presentation/Areas/Admin/Views/Match/Edit.cshtml
+++ b/BisLeagues.Presentation/Areas/Admin/Views/Match/Edit.cshtml
@@ -77,7 +77,7 @@
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="form-group">
-                                        <select class="form-control" name="playerOfTheMatchId" id="playerOfTheMatchId" data-style="btn btn-link" required>
+                                        <select class="form-control" name="playerOfTheMatchId" id="playerOfTheMatchId" data-style="btn btn-link">
                                             <option value="0" disabled selected>Maçın Adamı</option>
                                             @foreach (var player in Model.PlayerList)
                                             {
