--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Slider.cshtml
@@ -1,76 +1,38 @@
 ﻿@model IEnumerable<BisLeagues.Core.Models.New>
-<!-- Banner slider -->
-<div id="animated-slider" class="carousel slide carousel-fade">
 
-    <!-- Wrapper for slides -->
-    <div class="inner-banner-2">
-        <div class="carousel-inner" role="listbox">
-            @{ bool first = true;}
-            @foreach (var item in Model)
-            {
-                <!-- Item -->
-                <div class="item @{if (first) { first = false; @Html.Raw("active"); }}">
-                    <img class="fullscreen" src="@Url.Action("Resize", "Image", new { url = "Assets/images/slider_layer.jpg", width = 1725, height = 1159 })"  alt="">
-                    <div class="position-center-x full-width desktop-margin-slider">
-                        <div class="container">
-                            <div class="banner-layer pull-right">
-                                @if (item.CoverPhoto != null)
-                                {
-                                    <img class="animated fadeIn delay-1s" src="@Url.Action("Resize", "Image", new { url = item.CoverPhoto.Path, width = 620, height = 400    })" alt="@item.Caption">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+  @{int i = 0; }
+  @foreach(var item in Model)
+  {
+    <li data-target="#myCarousel" data-slide-to="@i" class="@(i==0 ? "active" : "")"></li>
+    i++;
+  }
+  </ol>
 
-                                }
-                                else
-                                {
-                                    <img class="animated fadeIn delay-1s" src="#" alt="@item.Caption">
-                                }
-                            </div>
-                            <div class="banner-caption style-1 p-white h-white pull-left">
-                                <h1 class="animated fadeInUp delay-3s">@item.Caption</h1>
-                                <p class="animated fadeInUp delay-4s">@item.ShortDescription</p>
-                                <a class="btn lg blue-btn animated fadeInRight delay-4s" href="@Url.Action("Detail","News", new { id = item.Id })">Detaya git</a>
-                            </div><br />
-                            <div class="hidden-md hidden-lg"  style="padding-top: 600px; margin-bottom:100px;">
-                                @if (item.CoverPhoto != null)
-                                {
-                                    <img class="animated fadeIn delay-1s" src="@Url.Action("Resize", "Image", new { url = item.CoverPhoto.Path, width = 400, height = 200 })" alt="@item.Caption">
 
-                                }
-                                else
-                                {
-                                    <img class="animated fadeIn delay-1s" src="#" alt="@item.Caption">
-                                }
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <!-- Item -->
-            }
-        </div>
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+  @{i = 0; }
+  @foreach(var item in Model)
+  {
+    <div class="item @(i==0 ? "active" : "")">
+      <a href="@Url.Action("Detail", "News", new { item.Id })">
+        <img style="max-height:800px;" src="@Url.Action("Resize", "Image", new { url = item.CoverPhoto.Path, width = 1177, height = 800    })" alt="@item.Caption">
+      </a>
     </div>
-    <!-- Wrapper for slides -->
-    <!-- Nan Control -->
-    <!--  <a class="slider-nav next" href="#inner-slider" data-slide="prev"><i class="fa fa-long-arrow-right"></i></a>
-     <a class="slider-nav prev" href="#inner-slider" data-slide="next"><i class="fa fa-long-arrow-left"></i></a> -->
-    <!-- Nan Control -->
-    <!-- News Slider -->
-    <div class="news-slider style-2">
-        <div class="container">
-            <div class="news-slider-holder">
-                <div class="alert-spinner">
-                    <div class="double-bounce1"></div>
-                    <div class="double-bounce2"></div>
-                </div>
-                <ul id="ticker" class="ticker">
-                    @foreach (var item in Model.Reverse())
-                    {
-                        <li><span class="hidden-sm hidden-xs">Gündem :</span>@item.Caption</li>
-                    }
-                </ul>
-            </div>
-        </div>
-    </div>
-    <!-- News Slider -->
+    i++;
+  }
+  </div>
 
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
-<!-- Banner slider -->
