--- a/BisLeagues.Presentation/Views/PointTable/Index.cshtml
+++ b/BisLeagues.Presentation/Views/PointTable/Index.cshtml
@@ -22,48 +22,50 @@
 }
 @if (!Model.NoMatchFound)
 {
+@section Heading{
 
 
-    @section Heading{
-
-
-
-        <!-- Page Heading & Breadcrumbs  -->
-        <div class="page-heading-breadcrumbs hidden-xs">
-            <div class="container">
-                <h2>Puan Durumu</h2>
-                <ul class="breadcrumbs">
-                    <li><a href="@Url.Action("Index","Home")">Anasayfa</a></li>
-                    <li>Puan Durumu</li>
-                </ul>
-            </div>
+    <!-- Page Heading & Breadcrumbs  -->
+    <div class="page-heading-breadcrumbs hidden-xs">
+        <div class="container">
+            <h2>Puan Durumu</h2>
+            <ul class="breadcrumbs">
+                <li>
+                    <a href="@Url.Action("Index", "Home")">Anasayfa</a>
+                </li>
+                <li>Puan Durumu</li>
+            </ul>
         </div>
-        <!-- Page Heading & Breadcrumbs  -->
-        <!-- Page Heading banner -->
-        <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new { url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900 }))">
-            <div class="container theme-padding">
-                <ul id="match-detail-slider" class="match-detail-slider">
-                    <li>
-                        <div class="pager-heading match-detail h-white">
-                            <span class="pull-left @homeTag">
-                                <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Home.Logo.Path, width = 200, height = 200 })" alt="">
-                            </span>
-                            <div class="vs-match-heading position-center-center">
-                                <strong class="vs-match-result">@Model.LastMatchsResult.HomeScore<span>Vs</span>@Model.LastMatchsResult.AwayScore</strong>
-                                <span class="end-time"><i class="fa fa-clock-o"></i>@Model.LastMatchsResult.Match.MatchDate.ToLocalTime().ToString("dd MMMM yyyy", System.Globalization.CultureInfo.InvariantCulture)</span>
-                            </div>
-                            <span class="pull-right @awayTag ">
-                                <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Away.Logo.Path, width = 200, height = 200 })" alt="">
+    </div>
+    <!-- Page Heading & Breadcrumbs  -->
+    <!-- Page Heading banner -->
+    <div class="inner-banner style-2 overlay-dark theme-padding parallax-window" style="background-image: url(@Url.Action("Resize", "Image", new {url = "Assets/images/backgrounds-football-1.jpg", width = 1920, height = 900}))">
+        <div class="container theme-padding">
+            <ul id="match-detail-slider" class="match-detail-slider">
+                <li>
+                    <div class="pager-heading match-detail h-white">
+                        <span class="pull-left @homeTag">
+                            <img src="@Url.Action("Resize", "Image", new {url = Model.LastMatchsResult.Match.Home.Logo.Path, width = 200, height = 200})" alt="">
+                        </span>
+                        <div class="vs-match-heading position-center-center">
+                            <strong class="vs-match-result">
+                                @Model.LastMatchsResult.HomeScore<span>Vs</span>@Model.LastMatchsResult.AwayScore
+                            </strong>
+                            <span class="end-time">
+                                <i class="fa fa-clock-o"></i>@Model.LastMatchsResult.Match.MatchDate.ToLocalTime().ToString("dd MMMM yyyy", System.Globalization.CultureInfo.InvariantCulture)
                             </span>
                         </div>
-                    </li>
-                </ul>
-            </div>
+                        <span class="pull-right @awayTag ">
+                            <img src="@Url.Action("Resize", "Image", new {url = Model.LastMatchsResult.Match.Away.Logo.Path, width = 200, height = 200})" alt="">
+                        </span>
+                    </div>
+                </li>
+            </ul>
         </div>
-        <!-- Page Heading banner -->
+    </div>
+    <!-- Page Heading banner -->
 
-    }
-}
+}}
 
 <div class="theme-padding white-bg">
     <div class="container">
@@ -76,32 +78,35 @@
                     <div class="last-matches styel-3">
                         <table class="table table-bordered table-hover">
                             <thead>
-                                <tr>
-                                    <th>#</th>
-                                    <th>Takım</th>
-                                    <th>M.S.</th>
-                                    <th>Av.</th>
-                                    <th>P.</th>
-                                </tr>
+                            <tr>
+                                <th>#</th>
+                                <th>Takım</th>
+                                <th>M.S.</th>
+                                <th>Kaz.</th>
+                                <th>Kay.</th>
+                                <th>Av.</th>
+                                <th>P.</th>
+                            </tr>
                             </thead>
                             <tbody>
-                                @{int order = 1; }
-                                @foreach (var row in Model.PointTableRows)
-                                {
-
-                                    <tr>
-                                        <td>@order</td>
-                                        <td>
-                                            <a href="@Url.Action("Detail", "Team", new { row.Team.Id })">
-                                                @row.Team.Name
-                                            </a>
-                                        </td>
-                                        <td>@row.MatchCount</td>
-                                        <td>@row.Average</td>
-                                        <td>@row.Point</td>
-                                    </tr>
-                                    order++;
-                                }
+                            @{ int order = 1; }
+                            @foreach (var row in Model.PointTableRows)
+                            {
+                                <tr>
+                                    <td>@order</td>
+                                    <td>
+                                        <a href="@Url.Action("Detail", "Team", new {row.Team.Id})">
+                                            @row.Team.Name
+                                        </a>
+                                    </td>
+                                    <td>@row.MatchCount</td>
+                                    <td>@row.WinCount</td>
+                                    <td>@row.LoseCount</td>
+                                    <td>@row.Average</td>
+                                    <td>@row.Point</td>
+                                </tr>
+                                order++;
+                            }
                             </tbody>
                         </table>
                     </div>
