--- a/BisLeagues.Presentation/Areas/Admin/Views/Home/Index.cshtml
+++ b/BisLeagues.Presentation/Areas/Admin/Views/Home/Index.cshtml
@@ -6,6 +6,9 @@
 <br/>
 <br/>
 <div style="margin-left: 50px;">
+    <form action="@Url.Action("ClearCache", "Home")">
+        <input type="submit" class="btn btn-warning" value="Cache Temizle">
+    </form>
     <form action="@Url.Action("UpdatePointTable", "Home")">
         <input type="submit" class="btn btn-success" value="Puan Tablolarını Güncelle">
     </form>
