--- a/BisLeagues.Presentation/Views/PointTable/Index.cshtml
+++ b/BisLeagues.Presentation/Views/PointTable/Index.cshtml
@@ -84,6 +84,7 @@
                                 <th>M.S.</th>
                                 <th>Kaz.</th>
                                 <th>Kay.</th>
+                                <th>Ber.</th>
                                 <th>Av.</th>
                                 <th>P.</th>
                             </tr>
@@ -102,6 +103,7 @@
                                     <td>@row.MatchCount</td>
                                     <td>@row.WinCount</td>
                                     <td>@row.LoseCount</td>
+                                    <td>@row.DrawCount</td>
                                     <td>@row.Average</td>
                                     <td>@row.Point</td>
                                 </tr>
