--- a/BisLeagues.Presentation/Views/Exchange/Index.cshtml
+++ b/BisLeagues.Presentation/Views/Exchange/Index.cshtml
@@ -71,7 +71,7 @@
                 <!-- Piont Table -->
                 <div class="macth-fixture">
                     <h5>Borsa Durumu</h5>
-                    <div class="last-matches styel-3">
+                    <div class="last-matches styel-3 table-responsive">
                         <table class="table table-bordered table-hover">
                             <thead>
                                 <tr>
