--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Footer.cshtml
@@ -160,10 +160,19 @@
 </nav>
 <!-- Slide Menu -->
 <!-- Java Script -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-91254948-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-91254948-2');
+</script>
 <script src="~/Assets/js/vendor/jquery.js"></script>
 <script src="~/Assets/js/vendor/bootstrap.min.js"></script>
 @*<script src="http://maps.google.com/maps/api/js?sensor=false"></script>*@
-<script src="~/Assets/js/gmap3.min.js"></script>
+@* <script async src="~/Assets/js/gmap3.min.js"></script> *@
 <script src="~/Assets/js/bigslide.js"></script>
 <script src="~/Assets/js/slick.js"></script>
 <script src="~/Assets/js/waterwheelCarousel.js"></script>
