--- a/BisLeagues.Presentation/Views/Shared/_Partials/_Head.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_Head.cshtml
@@ -2,7 +2,7 @@
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 <meta name="author" content="" />
 <!-- Document Title -->
-<title>@ViewBag.Title | BisLeague</title>
+<title>@ViewBag.Title | @ViewBag.CompanyName</title>
 <!-- StyleSheets -->
 
 <link rel="icon" type="image/png" href="~/favicon.png">
