--- a/BisLeagues.Presentation/Views/PointTable/Index.cshtml
+++ b/BisLeagues.Presentation/Views/PointTable/Index.cshtml
@@ -73,7 +73,7 @@
             <div class="col-lg-12 col-sm-12">
 
                 <!-- Piont Table -->
-                <div class="macth-fixture">
+                <div class="macth-fixture table-responsive">
                     <h5>Puan Durumu</h5>
                     <div class="last-matches styel-3">
                         <table class="table table-bordered table-hover">
