--- a/BisLeagues.Presentation/Areas/Admin/Views/Match/Create.cshtml
+++ b/BisLeagues.Presentation/Areas/Admin/Views/Match/Create.cshtml
@@ -57,6 +57,14 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="row">
+                                <div class="col-md-12">
+                                    <div class="form-group">
+                                        <label class="bmd-label-floating">Stad Adı</label>
+                                        <input name="StadiumName" id="StadiumName" value="-" class="form-control"/>
+                                    </div>
+                                </div>
+                            </div>
                             <label class="bmd-label-floating">Maç Tarihi</label>
                             <div class="row">
                                 <div class="col-md-1">
