--- a/BisLeagues.Presentation/Views/Exchange/Index.cshtml
+++ b/BisLeagues.Presentation/Views/Exchange/Index.cshtml
@@ -50,6 +50,7 @@
                             <div class="vs-match-heading position-center-center">
                                 <strong class="vs-match-result">@Model.LastMatchsResult.HomeScore<span>Vs</span>@Model.LastMatchsResult.AwayScore</strong>
                                 <span class="end-time"><i class="fa fa-clock-o"></i>@Model.LastMatchsResult.Match.MatchDate.ToLocalTime().ToString("dd MMMM yyyy", System.Globalization.CultureInfo.InvariantCulture)</span>
+                                <span class="end-time"><i class="fa fa-map-marker"></i>@Model.LastMatchsResult.Match.StadiumName</span>
                             </div>
                             <span class="pull-right @awayTag ">
                                 <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Away.Logo.Path, width = 200, height = 200 })" alt="">
@@ -68,6 +69,8 @@
         <div class="row">
             <div class="col-lg-12 col-sm-12">
 
+                @{ Model.Pagination.ControllerName = "Exchange"; Model.Pagination.ActionName = "Index"; }
+                <partial name="../Shared/_Partials/_Pagination" model="Model.Pagination" />
                 <!-- Piont Table -->
                 <div class="macth-fixture">
                     <h5>Borsa Durumu</h5>
@@ -107,6 +110,7 @@
                     </div>
                 </div>
                 <!-- Piont Table -->
+                <partial name="../Shared/_Partials/_Pagination" model="Model.Pagination" />
             </div>
         </div>
     </div>
