--- a/BisLeagues.Presentation/Views/GoalKing/Index.cshtml
+++ b/BisLeagues.Presentation/Views/GoalKing/Index.cshtml
@@ -49,6 +49,7 @@
                             <div class="vs-match-heading position-center-center">
                                 <strong class="vs-match-result">@Model.LastMatchsResult.HomeScore<span>Vs</span>@Model.LastMatchsResult.AwayScore</strong>
                                 <span class="end-time"><i class="fa fa-clock-o"></i>@Model.LastMatchsResult.Match.MatchDate.ToLocalTime().ToString("dd MMMM yyyy", System.Globalization.CultureInfo.InvariantCulture)</span>
+                                <span class="end-time"><i class="fa fa-map-marker"></i>@Model.LastMatchsResult.Match.StadiumName</span>
                             </div>
                             <span class="pull-right @awayTag ">
                                 <img src="@Url.Action("Resize", "Image", new { url = Model.LastMatchsResult.Match.Away.Logo.Path, width = 200, height = 200 })" alt="">
@@ -68,6 +69,8 @@
         <div class="row">
             <div class="col-lg-12 col-sm-12">
 
+                @{ Model.Pagination.ControllerName = "GoalKing"; Model.Pagination.ActionName = "Index"; }
+                <partial name="../Shared/_Partials/_Pagination" model="Model.Pagination" />
                 <!-- Piont Table -->
                 <div class="macth-fixture">
                     <h5>Gol Krallığı</h5>
@@ -82,7 +85,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @{int order = 1; }
+                                @{int order = Model.Pagination.PageNumber > 1 ? (Model.Pagination.PageSize * (Model.Pagination.PageNumber - 1)) + 1 : 1; }
                                 @foreach (var row in Model.GoalKingRows)
                                 {
 
@@ -108,6 +111,7 @@
                     </div>
                 </div>
                 <!-- Piont Table -->
+                <partial name="../Shared/_Partials/_Pagination" model="Model.Pagination" />
             </div>
         </div>
     </div>
