--- a/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
@@ -44,7 +44,7 @@
                             <h2>Giriş Yap<button class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button></h2>
                             <form action="@Url.Action("Login", "Authentication")" method="post">
                                 <div class="form-group">
-                                    <input type="text" class="form-control" name="username" placeholder="Eposta" required>
+                                    <input type="text" class="form-control" name="username" placeholder="E-posta" required>
                                     <i class=" fa fa-envelope"></i>
                                 </div>
                                 <div class="form-group">
