--- a/BisLeagues.Presentation/Views/Exchange/Index.cshtml
+++ b/BisLeagues.Presentation/Views/Exchange/Index.cshtml
@@ -85,7 +85,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                @{int order = 1; }
+                                @{int order = Model.Pagination.PageNumber > 1 ? (Model.Pagination.PageSize * (Model.Pagination.PageNumber - 1)) + 1 : 1; }
                                 @foreach (var row in Model.ExchangeTableRows)
                                 {
 
