Development FE-OLS #1

--- a/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
+++ b/BisLeagues.Presentation/Views/Shared/_Partials/_TopBar.cshtml
@@ -34,7 +34,7 @@
             </li>
             <li class="language-dropdown">
                 <a id="choses-lang" href="@Url.Action("Detail","Profile")">
-                    <i class="fa fa-user"></i>  PROFİLİM
+                    <i class="fa fa-user"></i>  PROFILE
                     <ul id="language-dropdown">
                     </ul>
                 </a>
